# part3

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  open-source.md
imgs/: icon.icns
src/: cmdexecutor.cpp  cmdexecutor.h  cmdgenerator.cpp  cmdgenerator.h  mainwindow.cpp  mainwindow.h
